Exception Handler, Repository, Service and Controller

--- a/CapstoneP/src/main/resources/application.properties
+++ b/CapstoneP/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.config.import=file:env.properties
 
+# Server Port
+server.port=${PORT}
+
+# Postgres
+spring.datasource.username=${PG_USERNAME}
+spring.datasource.password=${PG_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/${PG_DB}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=public
+
+# JWT
+spring.jwt.secret=${JWT_SECRET}
