Nuova base funzionante

--- a/CapstoneP/env.properties
+++ b/CapstoneP/env.properties
@@ -1,6 +1,5 @@
-SECRET=mysupersecret
 PG_USERNAME=postgres
 PG_PASSWORD=1234
-PG_DB=SharkTest
+PG_DB=sharkTest
 PORT=3001
 JWT_SECRET=PLL2KHLP467TYYCH38X8MYZLS1HK9J3Z6
