--- a/CapstoneP/src/main/resources/application.properties
+++ b/CapstoneP/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-spring.config.import=file:env.properties
 
 # Server Port
 server.port=${PORT}
+
+# Postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+spring.jpa.show-sql=true
+
+spring.config.import=file:env.properties
 
 # Postgres
 spring.datasource.username=${PG_USERNAME}
