--- a/CapAngular/package.json
+++ b/CapAngular/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "@auth0/angular-jwt": "^5.1.2",
     "bootstrap": "^5.3.1",
+    "ng-lottie": "^0.3.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
